--- a/layout/ChatLayout.css
+++ b/layout/ChatLayout.css
@@ -6,3 +6,9 @@
 .conveyjs-starter-logo {
     margin-right: 1em;
 }
+
+.lto-content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
